--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Blog</h1>
+        <h1>Rehashing the Idea</h1>
         <nav>
             <a href="index.html">Back to Homepage</a>
         </nav>
